--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   position: relative;
   line-height: 1.6;
   font-size:13px;
-  width:25%;
+  width:55%;
   height:40%;
   padding: 7px;
   border-radius: 6px;
@@ -180,7 +180,7 @@ body {
           
             <div class="row" style="display: flex; justify-content: space-around; width:90%">
                 <div class="column" style="flex: 1;">
-                    <p id="address" style="color: #000;font-size:10px;margin-left:60px;margin-top:-1px;font-weight: 700;"><br><span id="area">N/A</span>,<span id="city">N/A</span>-<span id="pincode">N/A</span>,<br><span id="state">N/A</span>,<span id="country">N/A</span></p>
+                    <p id="address" style="color: #000;font-size:10px;margin-left:60px;margin-top:-1px;font-weight: 700;"><br><span id="area"></span>,<span id="city"></span>-<span id="pincode"></span>,<br><span id="state"></span>,<span id="country"></span></p>
                 </div>
                 <div class="column" style="flex: 1;">
                     <p style="color: #000;font-size:10px;margin-left:60px;margin-top:-1px;font-weight: 700;">
