--- a/index.html
+++ b/index.html
@@ -137,16 +137,16 @@
 <body>
     <div class="business-card">
         <div class="slice" style="display: flex;gap: 5px">
-            <p style="color: #f7f7f7; font-size: 23px; margin-left:210px;transform: rotate(2deg);margin-top:-1px; ">
+            <p style="color: #f7f7f7; font-size: 23px; margin-left:210px;transform: rotate(2deg);margin-top:8px; ">
                 <span style="color: #ee473b;">US</span> AgriSeeds
             </p>
-            <p style="color: #f7f7f7; font-size:8px;margin-left:-64px;margin-top:51px;transform: rotate(2deg); ">
+            <p style="color: #f7f7f7; font-size:8px;margin-left:-67px;margin-top:51px;transform: rotate(2deg); ">
                 Seed that Works
             </p>
         </div>
         <div class="slice2"></div>
         <div class="content" style="display: flex; flex-direction: column; align-items: center;">
-            <div class="row" style="display: flex; align-items: center; justify-content: center; gap: 10px; position: relative; width:110%;margin-top:140px;margin-left: -56px;">
+            <div class="row" style="display: flex; align-items: center; justify-content: center; gap: 10px; position: relative; width:110%;margin-top:140px;margin-left: -76px;">
                 <div style="background-color: #004d99; width: 130px; height: 4px; border-radius: 3px;"></div>
                 <p style="font-size: 14px; color: #000; margin: 0; font-weight: bold; white-space: nowrap;">
                   SeedWorks International Pvt. Ltd.
@@ -162,7 +162,7 @@
                   <span id="state"></span>, <span id="country"></span>
                 </p>
               </div>
-              <div class="column" style="margin-right:-40px;">
+              <div class="column" style="margin-left:-50px;">
                 <p>Tell:<span id="mobile_no" style="color: #000;font-size:10px;"></span></p>
                 <p>Fax:<span id="mobile_no"  style="color: #000;font-size:10px;"></span></p>
                 <p>Mobile:<span id="fax_no"  style="color: #000;font-size:10px;"></span></p>
