--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 <body>
     <div class="business-card">
         <div class="slice" style="display: flex;gap: 5px">
-            <p style="color: #f7f7f7; font-size: 23px; margin-left:210px;transform: rotate(2deg);margin-top:8px; ">
+            <p style="color: #f7f7f7; font-size: 23px; margin-left:210px;transform: rotate(2deg);margin-top:14px; ">
                 <span style="color: #ee473b;">US</span> AgriSeeds
             </p>
-            <p style="color: #f7f7f7; font-size:8px;margin-left:-67px;margin-top:51px;transform: rotate(2deg); ">
+            <p style="color: #f7f7f7; font-size:7px;margin-left:-68px;margin-top:51px;transform: rotate(2deg); ">
                 Seed that Works
             </p>
         </div>
@@ -162,17 +162,17 @@
                   <span id="state"></span>, <span id="country"></span>
                 </p>
               </div>
-              <div class="column" style="margin-left:-50px;">
+              <div class="column" style="margin-left:-60px;">
                 <p>Tell:<span id="mobile_no" style="color: #000;font-size:10px;"></span></p>
-                <p>Fax:<span id="mobile_no"  style="color: #000;font-size:10px;"></span></p>
-                <p>Mobile:<span id="fax_no"  style="color: #000;font-size:10px;"></span></p>
+                <p>Fax:<span id="fax_no"  style="color: #000;font-size:10px;"></span></p>
+                <p>Mobile:<span id="mobile_no"  style="color: #000;font-size:10px;"></span></p>
               </div>
             </div>
             
             <div class="row" style="margin-top:5px">
-              <p style="margin-left:30px;color: #000;">Email: <span id="email">N/A</span></p>
+              <p style="margin-left:20px;color: #000;">Email: <span id="email">N/A</span></p>
               <p style="color: #000;">/</p>
-              <p  style="margin-right:50px;color: #000;">Website: <span id="website">N/A</span></p>
+              <p  style="margin-right:70px;color: #000;">Website: <span id="website">N/A</span></p>
             </div>
           </div>
           
