--- a/index.html
+++ b/index.html
@@ -204,99 +204,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital vCard</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-        }
-        .vcard-container {
-            width: 380px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 30px;
-            backdrop-filter: blur(25px);
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            overflow: hidden;
-            box-shadow: 0 30px 60px -15px rgba(0, 0, 0, 0.3);
-            position: relative;
-        }
-        .header {
-            height: 200px;
-            background: linear-gradient(135deg, rgba(106, 17, 203, 0.9), rgba(37, 117, 252, 0.9));
-            position: relative;
-        }
-        .profile-section {
-            text-align: center;
-            margin-top: -80px;
-            position: relative;
-            z-index: 2;
-        }
-        .profile-image {
-            width: 160px;
-            height: 160px;
-            border-radius: 50%;
-            border: 6px solid rgba(255, 255, 255, 0.7);
-            background: #f0f0f0;
-            object-fit: cover;
-        }
-        .profile-info {
-            margin-top: 25px;
-            color: white;
-        }
-        .profile-info h1 {
-            font-size: 32px;
-            font-weight: 700;
-            margin-bottom: 8px;
-        }
-        .profile-info p {
-            font-size: 18px;
-            color: rgba(255, 255, 255, 0.85);
-        }
-        .details-section {
-            padding: 30px;
-            background: rgba(255, 255, 255, 0.15);
-            border-radius: 25px;
-            margin: 25px;
-        }
-        .contact-item {
-            display: flex;
-            align-items: center;
-            padding: 18px;
-            background: rgba(255, 255, 255, 0.25);
-            border-radius: 18px;
-            margin-bottom: 18px;
-        }
-        .icon {
-            width: 45px;
-            height: 45px;
-            background: rgba(255, 255, 255, 0.35);
-            border-radius: 12px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-right: 18px;
-            font-size: 22px;
-            color: white;
-        }
-        .contact-label {
-            font-size: 18px;
-            color: white;
-            font-weight: 500;
-        }
+        /* Styles remain unchanged */
     </style>
 </head>
 <body>
     <div class="vcard-container">
         <div class="header"></div>
         <div class="profile-section">
-            <img id="profile-image" src="" alt="Profile" class="profile-image">
+            <!-- Profile Image with Fallback -->
+            <img id="profile-image" src="" alt="Profile" class="profile-image" onerror="handleImageError(this);">
             <div class="profile-info">
                 <h1 id="name"></h1>
                 <p id="designation"></p>
@@ -320,13 +236,37 @@
     </div>
     <script>
         const urlParams = new URLSearchParams(window.location.search);
-        document.getElementById("profile-image").src = urlParams.get("image") || "default.jpg";
+
+        // Set profile image dynamically or fallback to default
+        const imageUrl = urlParams.get("image");
+        const profileImage = document.getElementById("profile-image");
+        if (imageUrl) {
+            profileImage.src = imageUrl; // Use the provided image URL
+        } else {
+            profileImage.src = "default.jpg"; // Fallback to the local default image
+        }
+
+        // Handle image errors to prevent infinite loops
+        function handleImageError(imgElement) {
+            // Check if the fallback image has already been set
+            if (!imgElement.dataset.fallbackSet) {
+                imgElement.src = "default.jpg"; // Set fallback image
+                imgElement.dataset.fallbackSet = true; // Mark fallback as set
+            } else {
+                console.error("Fallback image failed to load.");
+            }
+        }
+
+        // Set other fields dynamically
         document.getElementById("name").textContent = urlParams.get("emp_name") || "N/A";
         document.getElementById("designation").textContent = urlParams.get("emp_designation") || "N/A";
         document.getElementById("company").textContent = urlParams.get("name") || "N/A";
         document.getElementById("mobile").textContent = urlParams.get("mobile_no") || "N/A";
         document.getElementById("email").textContent = urlParams.get("email") || "N/A";
         document.getElementById("website").textContent = urlParams.get("website") || "N/A";
+
+        // Debugging: Log the image URL
+        console.log("Image URL:", imageUrl);
     </script>
 </body>
 </html>
