--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <div class="header"></div>
         <div class="profile-section">
             <!-- Static Image from Public Folder -->
-            <img id="profile-image" src="/default.jpg" alt="Profile" class="profile-image">
+            <img id="profile-image" src="./images/employee.png" alt="Profile" class="profile-image">
             <div class="profile-info">
                 <h1 id="name"></h1>
                 <p id="designation"></p>
