--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital vCard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <style>
       * {
           margin: 0;
@@ -290,11 +292,37 @@
           color: white;
           font-weight: 500;
       }
+      .contact-label2 {
+    font-size: 18px;
+    color: white;
+    font-weight: 500;
+    white-space: nowrap;  /* Prevents text from wrapping */
+    overflow: hidden;  /* Hides overflow text */
+    text-overflow: ellipsis;  /* Adds "..." if text is too long */
+    max-width: 150px;  /* Adjust as needed to fit inside the box */
+    display: block;  /* Ensures proper layout */
+}
+
       .action-buttons {
           display: flex;
           justify-content: space-between;
           margin-top: 20px;
       }
+      .icon-phone {
+    color:#00BFA5; /* Red */
+}
+
+.icon-email img{
+    width: 30px;  /* Adjust size */
+    height: 30px;
+    object-fit: contain;  /* Ensures no background issues */
+    background: transparent;  /* Light Blue */
+}
+
+.icon-website {
+    color: #00BFA5; /* Teal */
+}
+
       .action-buttons button {
           padding: 10px 20px;
           border: none;
@@ -328,15 +356,15 @@
         </div>
         <div class="details-section">
             <div class="contact-item">
-                <div class="icon">📞</div>
+                <div class="icon icon-phone"><i class="fas fa-phone"></i></div>
                 <span class="contact-label" id="mobile"></span>
             </div>
             <div class="contact-item">
-                <div class="icon">✉️</div>
-                <span class="contact-label" id="email"></span>
+                <div class="icon icon-email">  <img src="./images//mail.png" alt="Gmail" width="30" height="30"></div>
+                <span class="contact-label2" id="email"></span>
             </div>
             <div class="contact-item">
-                <div class="icon">🌐</div>
+                <div class="icon icon-website"><i class="fas fa-globe"></i></div>
                 <span class="contact-label" id="website"></span>
             </div>
         </div>
