--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
           z-index: 2;
       }
       .profile-image {
-          width: 160px;
-          height: 160px;
+          width: 100%;
+          height: 100%;
           border-radius: 50%;
           border: 6px solid rgba(255, 255, 255, 0.7);
           background: #f0f0f0;
-          object-fit: cover;
+          object-fit: contain;
       }
       .profile-info {
           margin-top: 25px;
