--- a/index.html
+++ b/index.html
@@ -351,12 +351,59 @@ END:VCARD
 //     link.click();
 //     document.body.removeChild(link);
 // }
+// async function dialogshare() {
+//     const empName = document.getElementById("newname").value || "N/A";
+//     const mobileNo = document.getElementById("mobileno").value || "N/A";
+//     const message = document.getElementById("companyname").value || "N/A";
+//     const email = document.getElementById("email").value || "N/A";
+//     const companyNumber = urlParams.get("mobile_no") || "N/A";
+
+//     const vCardData = `BEGIN:VCARD
+// VERSION:3.0
+// FN:${empName}
+// ORG:Company
+// TEL;TYPE=WORK,VOICE:${companyNumber}
+// TEL;TYPE=CELL:${mobileNo}
+// EMAIL:${email}
+// NOTE:${message}
+// END:VCARD`;
+
+//     const blob = new Blob([vCardData], { type: "text/vcard" });
+//     const file = new File([blob], `${empName}.vcf`, { type: "text/vcard" });
+
+//     if (navigator.share) {
+//         try {
+//             await navigator.share({
+//                 title: "Share Contact",
+//                 text: `Here is the contact of ${empName}.`,
+//                 files: [file]
+//             });
+//         } catch (error) {
+//             console.error("Error sharing:", error);
+//         }
+//     } else {
+//         const link = document.createElement("a");
+//         link.href = URL.createObjectURL(blob);
+//         link.download = `${empName}.vcf`;
+//         document.body.appendChild(link);
+//         link.click();
+//         document.body.removeChild(link);
+//     }
+// }
 async function dialogshare() {
+    console.log("Attempting to share...");
+
+    if (!navigator.share) {
+        console.error("Web Share API not supported.");
+        return;
+    }
+
     const empName = document.getElementById("newname").value || "N/A";
     const mobileNo = document.getElementById("mobileno").value || "N/A";
     const message = document.getElementById("companyname").value || "N/A";
     const email = document.getElementById("email").value || "N/A";
     const companyNumber = urlParams.get("mobile_no") || "N/A";
+
 
     const vCardData = `BEGIN:VCARD
 VERSION:3.0
@@ -370,26 +417,26 @@ END:VCARD`;
 
     const blob = new Blob([vCardData], { type: "text/vcard" });
     const file = new File([blob], `${empName}.vcf`, { type: "text/vcard" });
+    console.log("Checking share capability...");
+    if (navigator.canShare && !navigator.canShare({ files: [file] })) {
+        console.error("File sharing is NOT supported on this browser.");
+        return;
+    }
 
-    if (navigator.share) {
-        try {
-            await navigator.share({
-                title: "Share Contact",
-                text: `Here is the contact of ${empName}.`,
-                files: [file]
-            });
-        } catch (error) {
-            console.error("Error sharing:", error);
-        }
-    } else {
-        const link = document.createElement("a");
-        link.href = URL.createObjectURL(blob);
-        link.download = `${empName}.vcf`;
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
+    console.log("Sharing file...");
+    try {
+        await navigator.share({
+            title: "Share Contact",
+            text: `Here is the contact of ${empName}.`,
+            files: [file]
+        });
+        console.log("Sharing successful!");
+    } catch (error) {
+        console.error("Error sharing:", error);
     }
 }
+
+
 
     </script>
 </body>
